--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -130,3 +130,48 @@
 	urldate={2022-04-02},
 }
 
+@online{block13,
+	author={David {Carrasco}},
+	url={https://github.com/David-Carrasco/Scrapy-Idealista},
+	title={Scrapy-Idealista},
+	date={2020-10-21},
+	urldate={2022-04-03},
+}
+
+@online{block14,
+	author={Miguel Ángel {Gisbert}},
+	url={https://www.youtube.com/watch?v=2UyJv5oe570},
+	title={🗣 Cómo Encontrar CASAS Baratas - Parte 1: Scrapear datos de IDEALISTA 🐍},
+	date={2021-06-24},
+	urldate={2022-04-04},
+}
+
+@online{block15,
+	author={Code Monkey King},
+	url={https://www.youtube.com/watch?v=4Tv73KuqgVo},
+	title={Scraping Spanish real estate properties from idealista.com | REAL WORLD project | Python SCRAPY},
+	date={2020-05-23},
+	urldate={2022-04-1},
+}
+
+@online{block16,
+	author={Irene {Fernández Molina}} {Héctor {Hernández Membiela}},
+	url={https://github.com/EdelBlau/PEC_TPC},
+	title={PEC TPC},
+	date={2019-04-15},
+	urldate={2022-04-02},
+}
+
+@online{block17,
+	author={Idealista},
+	url={https://www.idealista.com/},
+	title={Portal web completo de Idealista},
+	urldate={2022-04},
+}
+
+@online{block18,
+	author={Fotocasa},
+	url={https://www.fotocasa.es/es/},
+	title={Portal web completo de Fotocasa},
+	urldate={2022-04},
+}
